# WordMesh

./: AGENTS.md  DEPLOYMENT.md  README.md  TODO.md  udo systemctl status docker
WordMesh-backend/: .gitignore  Cargo.toml
WordMesh-backend/config/: default.toml  development.toml  production.toml  testing.toml
WordMesh-backend/migrations/: 202502040001_create_word_tables.sql
WordMesh-backend/src/: lib.rs  main.rs
WordMesh-backend/src/application/: mod.rs
WordMesh-backend/src/config/: settings.rs
WordMesh-backend/src/controller/: auth.rs  mod.rs
WordMesh-backend/src/domain/: mod.rs  user.rs  word.rs
WordMesh-backend/src/dto/: auth.rs  mod.rs
WordMesh-backend/src/middleware/: auth_guard.rs  auth_guard.rs~  mod.rs  request_id.rs
WordMesh-backend/src/repository/: graph.rs  mod.rs  user.rs  word.rs
WordMesh-backend/src/service/: auth.rs  mod.rs  sense.rs  word.rs
WordMesh-backend/src/util/: canonical.rs  error.rs  mod.rs  password.rs  response.rs  token.rs  validation.rs
WordMesh-backend/tests/: auth_integration.rs  repository_user_tests.rs
WordMesh-backend/tests/migrations/: 202501040001_init_users.sql
deployment/: docker-compose.yml
deployment/init-scripts/: 01-init-postgres.sh  02-init-neo4j.sh  README.md  init-all-databases.sh  wordmesh-neo4j-schema.cypher  wordmesh-postgres-schema.sql
docs/: DELIVERY.md  DEPLOYMENT.md  PRD.md  README.md  RUNBOOK.md  Technical_Design.md  api.md  openapi.yaml
docs/backend/: CONFIGURATION.md  README.md
docs/backend/auth/: IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  TECHNICAL_DESIGN.md
(+3 files in other folders)
