[package]
name = "Wordmesh-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.6"
actix-rt = "2.8"

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
neo4rs = "0.19"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Configuration
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP client (for future external API calls)
reqwest = { version = "0.11", features = ["json"] }

# Development dependencies
[dev-dependencies]
tokio-test = "0.4"
